<resources>
    <string name="app_name">Pure Leagues</string>
    <string name="parse_server_url">http://parse-env.3ckhcpskac.us-east-1.elasticbeanstalk.com/parse</string>
    <string name="parse_app_id">72C6FFA9CF4C2</string>
    <string name="admob_app_id">ca-app-pub-3091183191433381~7884222551</string>
    <string name="admob_app_unit_id">ca-app-pub-3091183191433381/3314422154</string>
    <string name="login_screen_title">Welcome to Pure Leagues</string>
    <string name="welcome_screen_subtitle">The essential sporting app for following your favourite team.</string>
    <string name="welcome_login_button_text">Login</string>
    <string name="welcome_add_team_button_text">Add a team</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="welcome_register_subtitle_text">Would you like to register first to have access to all features?</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_forgot_pass_text">Forgotten password?</string>
    <string name="submit_button_text">Submit</string>
    <string name="login_password_recovery_hint">Enter your email address below and we will email you a link to change your password.</string>
    <string name="email_hint">Email address</string>
    <string name="registration_screen_title">Registration</string>
    <string name="name_hint">Name</string>
    <string name="registration_email_hint">Email</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="continue_button_text">Continue</string>
    <string name="date_of_birth_hint">Date of birth</string>
    <string name="gender_hint">Gender</string>
    <string name="user_type_hint">Type of user</string>
    <string name="male_item">Male</string>
    <string name="female_item">Female</string>
    <string name="player_item">Player</string>
    <string name="manager_item">Manager</string>
    <string name="referee_item">Referee</string>
    <string name="family_member_item">Family Member</string>
    <string name="follower_item">Follower</string>
    <string name="complete_registration_button_text">Complete registration</string>
    <string name="register_continue_title_text">Complete the following to select your favourite team to follow in Pure Leagues</string>
    <string name="football_association_hint">Choose your football association</string>
    <string name="club_hint">Club name</string>
    <string name="division_hint">Division</string>
    <string name="team_colors_hint">Select team colours</string>
    <string name="register_button_text">Register</string>
    <string name="football_association">Football association</string>
    <string name="search_hint">Search</string>
    <string name="team_colors_title">Team Colours</string>
    <string name="tab_fixtures_title">Fixtures</string>
    <string name="tab_results_title">Results</string>
    <string name="tab_tables_title">Tables</string>
    <string name="tab_stats_title">Stats</string>
    <string name="tab_gallery_title">Gallery</string>
    <string name="tab_calendar_title">Calendar</string>
    <string name="username_empty_error_message">Username cannot be empty</string>
    <string name="username_min_length_error_message">Username must be a minimum of %d characters</string>
    <string name="password_empty_error_message">Please enter password</string>
    <string name="password_min_length_error_message">Password must be a minimum of %d characters and include letters and numbers</string>
    <string name="name_empty_error_message">Name is empty</string>
    <string name="email_empty_error_message">Email cannot be empty</string>
    <string name="email_error_message">Email is incorrect</string>
    <string name="password_not_match_error_message">Passwords do not match</string>
    <string name="connection_to_server_error_message">Connection error</string>
    <string name="invalid_credentials_error_message">Username or password is incorrect</string>
    <string name="reset_email_sent">Email sent</string>
    <string name="route_label">Route</string>
    <string name="weather_label">Weather</string>
    <string name="messages_label">Messages</string>
    <string name="openDrawer">Open menu</string>
    <string name="closeDrawer">Close menu</string>
    <string name="nav_item_dashboard">Dashboard</string>
    <string name="nav_item_edit_profile">Edit profile</string>
    <string name="nav_item_share">Share Pure Leagues</string>
    <string name="nav_item_about">About Pure Leagues</string>
    <string name="nav_item_terms">Terms and conditions</string>
    <string name="nav_item_privacy">Privacy policy</string>
    <string name="nav_item_contact_us">Contact us</string>
    <string name="contact_tab_title">Contact</string>
    <string name="contact_us_reason_hint">Reason for contact</string>
    <string name="contact_us_name_hint">Name</string>
    <string name="contact_us_email_hint">Email</string>
    <string name="contact_us_phone_hint">Telephone</string>
    <string name="contact_us_message_hint">Message</string>
    <string name="field_empty_error_message">Fill this field before submit</string>
    <string name="form_submitted_message">Form submitted</string>
    <string name="about_title">About Pure Leagues</string>
    <string name="privacy_policy_title">About Pure Leagues</string>
    <string name="send_to">Send to</string>
    <string name="edit_profile_edit_text_view">edit profile</string>
    <string name="edit_profile_name_label">Name</string>
    <string name="edit_profile_age_label">Age</string>
    <string name="edit_profile_height_label">Height</string>
    <string name="edit_profile_weight_label">Weight</string>
    <string name="edit_profile_position_label">Position</string>
    <string name="edit_profile_save_text_view">save profile</string>
    <string name="edit_profile_profile_label">Profile</string>
    <string name="edit_profile_teams_label">Teams</string>
    <string name="welcome_add_team_button_text_button_text">add team</string>
    <string name="tab_edit_team_title">Edit team</string>
    <string name="shirt_colour_label">Shirt colour</string>
    <string name="edit_team_notifications_label">Notifications</string>
    <string name="edit_team_allow_notif_label">Allow notifications</string>
    <string name="delete_team_button_text">Delete team</string>
    <string name="delete_team_confirm_message">Are you sure you want to delete</string>
    <string name="delete_text">Delete</string>
    <string name="tables_games_label">P</string>
    <string name="tables_won_label">W</string>
    <string name="tables_drawn_label">D</string>
    <string name="tables_lost_label">L</string>
    <string name="tables_goals_for_label">F</string>
    <string name="tables_goals_against_label">A</string>
    <string name="tables_goals_difference_label">GD</string>
    <string name="tables_points_label">PTS</string>
    <string name="dashboard_fixture_versus_label">VS</string>
    <string name="dashboard_latest_messages_label">Latest messages</string>
    <string name="all_messages_button_text">Invite a Friend</string>
    <string name="yesterday_label">yesterday</string>
    <string name="today_label">today</string>
    <string name="edit_team_title">Edit team</string>
    <string name="unread_messages_pattern">Unread (%s)</string>
    <string name="weather_api_key">6deb2f98887cd3c4237c12480e3209a8</string>
    <string name="send_message_button_text">Post message</string>
    <string name="pick_image_dialog_text">Select Picture</string>
    <string name="statistics_goals">GOALS</string>
    <string name="statistics_top_scores">Top scorers</string>
    <string name="statistics_text_hint">Your club</string>
    <string name="results">Results</string>
    <string name="fixtures">Fixtures</string>
    <string name="statistics_spinner_prompt">Select your club</string>
    <string name="default_unread_messages">Unread (0)</string>
    <string name="nav_item_logout">Log out</string>
    <string name="no_fixtures_available">No fixtures available for %1$s</string>
    <string name="no_results_available">No results available for %1$s</string>
    <string name="close_text">Close</string>
    <string name="no_connection_message">No internet connection available</string>
    <string name="loading_data_message">Loading data…</string>
    <string name="max_teams_size_error_message">Max 3 teams allowed</string>
    <string name="max_manager_teams_size_error_message">Max 1 team allowed for manager</string>
    <string name="min_age_not_reached_error_message">You must be at least 13 years old</string>
    <string name="welcome_anonymous_login_button_text">anonymous login</string>
    <string name="register_error_message">You must register to use this feature</string>
    <string name="nav_item_register">Register</string>
    <string name="facebook_url">https://www.facebook.com/pureleagues</string>
    <string name="twitter_url">https://twitter.com/pureleagues</string>
    <string name="instagram_url">https://www.instagram.com/pureleagues</string>
    <string name="youtube_url">https://www.youtube.com/channel/UCAEa9WxKzhh9Gi4pthtY8zw</string>
    <string name="snapchat_url">https://www.snapchat.com/add/pureleagues</string>
    <string name="admin_email">info@pureleagues.com</string>
    <string name="admin_password">F5R4E6E3m4a1n@</string>
    <string name="no_data_available">No data available</string>
    <string name="no_images_available">No images available</string>
    <string name="mailgun_domain">sandbox74833a22e5774355bd360c72bca70985.mailgun.org</string>
    <string name="mailgun_api_key">key-eb3b2416cb8b87332f3778c6834039cb</string>
    <string name="form_submitted_error_message">Service unavailable. Try again later.</string>
    <string name="submitting_text">Sending…</string>
</resources>