<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frmLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/dashboard_pager_background"
                tools:visibility="visible">

                <android.support.v4.view.ViewPager
                    android:id="@+id/dashboard_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    tools:visibility="visible" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:visibility="visible">

                    <!--   <ImageView
                           android:id="@+id/dashboard_arrow_left"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentLeft="true"
                           android:layout_alignParentStart="true"
                           android:layout_centerInParent="true"
                           android:layout_marginLeft="8dp"
                           android:padding="10dp"
                           app:srcCompat="@drawable/dashboard_pager_arrow_left" />-->

                    <!-- <ImageView
                         android:id="@+id/dashboard_arrow_right"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
                         android:layout_centerInParent="true"
                         android:layout_marginRight="8dp"
                         android:padding="10dp"
                         app:srcCompat="@drawable/dashboard_pager_arrow_right" /> -->
                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/dashboard_route_button"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/dashboard_pager_button_background"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/dashboard_fixture_route_label"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingBottom="4dp"
                                android:paddingTop="4dp"
                                android:text="@string/route_label"
                                android:textColor="@color/title_white_text_color"
                                android:textSize="12sp" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingBottom="8dp"
                                app:srcCompat="@drawable/ic_route" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/dashboard_weather_button"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginStart="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/dashboard_pager_button_background"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/dashboard_fixture_weather_label"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingTop="4dp"
                                android:text="@string/weather_label"
                                android:textColor="@color/title_white_text_color"
                                android:textSize="12sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:paddingBottom="12dp"
                                android:paddingTop="4dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginStart="8dp"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/ic_weather" />

                                <me.grantland.widget.AutofitTextView
                                    android:id="@+id/dashboard_weather_temperature"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginEnd="8dp"
                                    android:layout_marginRight="8dp"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:lines="1"
                                    android:textColor="@color/title_white_text_color"
                                    android:textSize="18sp" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/dashboard_messages_button"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="4dp"
                            android:layout_marginStart="4dp"
                            android:layout_weight="1"
                            android:visibility="gone"
                            android:background="@drawable/dashboard_pager_button_background"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/dashboard_messages_label"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:paddingTop="4dp"
                                android:text="@string/messages_label"
                                android:textColor="@color/title_white_text_color"
                                android:textSize="12sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:paddingBottom="12dp"
                                android:paddingTop="4dp">

                                <ImageView
                                    android:id="@+id/imageView6"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginStart="8dp"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/ic_mail" />

                                <me.grantland.widget.AutofitTextView
                                    android:id="@+id/dashboard_messages"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginEnd="12dp"
                                    android:layout_marginRight="12dp"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:lines="1"
                                    android:text=""
                                    android:textColor="@color/title_white_text_color"
                                    android:textSize="18sp" />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/dashboard_no_data_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/linearLayout"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/no_fixtures_available"
                        android:textColor="@color/general_text_color"
                        android:textSize="18sp"
                        android:visibility="invisible"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/dashboard_messages_badge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/linearLayout"
                        android:layout_alignEnd="@+id/linearLayout"
                        android:layout_alignRight="@+id/linearLayout"
                        android:layout_marginBottom="-14dp"
                        android:layout_marginEnd="-10dp"
                        android:layout_marginRight="-10dp"
                        android:background="@drawable/messages_badge_background"
                        android:gravity="center"
                        android:text="5"
                        android:textColor="@color/title_white_text_color"
                        android:visibility="gone" />

                </RelativeLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dashboard_latest_messages_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/dashboard_latest_messages_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/general_text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dashboard_unread_messages"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end"
                        android:text="@string/default_unread_messages"
                        android:textColor="@color/general_text_color"
                        android:textSize="16sp"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dashboard_latest_messages_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:visibility="gone"
                    android:orientation="vertical" />

                <Button
                    android:id="@+id/dashboard_all_messages_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@color/icon_background"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/all_messages_button_text"
                    android:textColor="@color/general_text_color" />

            </LinearLayout>

            <include
                android:id="@+id/footer"
                layout="@layout/footer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
